--- a/IdentityServer/Views/Home/Index.cshtml
+++ b/IdentityServer/Views/Home/Index.cshtml
@@ -1,21 +1,23 @@
+@using IdentityServer4.Hosting
 <!--
- Digital Excellence Copyright (C) 2020 Brend Smits
+Digital Excellence Copyright (C) 2020 Brend Smits
  
- This program is free software: you can redistribute it and/or modify 
- it under the terms of the GNU Lesser General Public License as published 
- by the Free Software Foundation version 3 of the License.
+This program is free software: you can redistribute it and/or modify 
+it under the terms of the GNU Lesser General Public License as published 
+by the Free Software Foundation version 3 of the License.
  
- This program is distributed in the hope that it will be useful, 
- but WITHOUT ANY WARRANTY; without even the implied warranty 
- of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
- See the GNU Lesser General Public License for more details.
+This program is distributed in the hope that it will be useful, 
+but WITHOUT ANY WARRANTY; without even the implied warranty 
+of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
+See the GNU Lesser General Public License for more details.
  
- You can find a copy of the GNU Lesser General Public License 
- along with this program, in the LICENSE.md file in the root project directory.
- If not, see https://www.gnu.org/licenses/lgpl-3.0.txt
+You can find a copy of the GNU Lesser General Public License 
+along with this program, in the LICENSE.md file in the root project directory.
+If not, see https://www.gnu.org/licenses/lgpl-3.0.txt
 -->
 @{
-    var version = typeof(IdentityServer4.Hosting.IdentityServerMiddleware).Assembly.GetName().Version.ToString();
+    string version = typeof(IdentityServerMiddleware).Assembly.GetName()
+                                                     .Version.ToString();
 }
 
 <div class="welcome-page">
