--- a/IdentityServer/Views/Device/UserCodeConfirmation.cshtml
+++ b/IdentityServer/Views/Device/UserCodeConfirmation.cshtml
@@ -1,27 +1,29 @@
 <!--
- Digital Excellence Copyright (C) 2020 Brend Smits
+Digital Excellence Copyright (C) 2020 Brend Smits
  
- This program is free software: you can redistribute it and/or modify 
- it under the terms of the GNU Lesser General Public License as published 
- by the Free Software Foundation version 3 of the License.
+This program is free software: you can redistribute it and/or modify 
+it under the terms of the GNU Lesser General Public License as published 
+by the Free Software Foundation version 3 of the License.
  
- This program is distributed in the hope that it will be useful, 
- but WITHOUT ANY WARRANTY; without even the implied warranty 
- of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
- See the GNU Lesser General Public License for more details.
+This program is distributed in the hope that it will be useful, 
+but WITHOUT ANY WARRANTY; without even the implied warranty 
+of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
+See the GNU Lesser General Public License for more details.
  
- You can find a copy of the GNU Lesser General Public License 
- along with this program, in the LICENSE.md file in the root project directory.
- If not, see https://www.gnu.org/licenses/lgpl-3.0.txt
+You can find a copy of the GNU Lesser General Public License 
+along with this program, in the LICENSE.md file in the root project directory.
+If not, see https://www.gnu.org/licenses/lgpl-3.0.txt
 -->
 @model IdentityServer.Device.DeviceAuthorizationViewModel
 
 <div class="page-header">
     <div class="row page-header">
         <div class="col-sm-10">
-            @if (Model.ClientLogoUrl != null)
+            @if(Model.ClientLogoUrl != null)
             {
-                <div class="client-logo"><img src="@Model.ClientLogoUrl"></div>
+                <div class="client-logo">
+                    <img src="@Model.ClientLogoUrl">
+                </div>
             }
             <h1>
                 @Model.ClientName
@@ -30,7 +32,7 @@
         </div>
     </div>
 
-    @if (Model.ConfirmUserCode)
+    @if(Model.ConfirmUserCode)
     {
         <div class="row">
             <div class="col-sm-8">
@@ -43,14 +45,14 @@
 
     <div class="row">
         <div class="col-sm-8">
-            <partial name="_ValidationSummary" />
+            <partial name="_ValidationSummary"/>
 
             <form asp-action="Callback" class="consent-form">
-                <input asp-for="UserCode" type="hidden" value="@Model.UserCode" />
+                <input asp-for="UserCode" type="hidden" value="@Model.UserCode"/>
 
                 <div>Uncheck the permissions you do not wish to grant.</div>
 
-                @if (Model.IdentityScopes.Any())
+                @if(Model.IdentityScopes.Any())
                 {
                     <div class="panel panel-default consent-buttons">
                         <div class="panel-heading">
@@ -58,15 +60,15 @@
                             Personal Information
                         </div>
                         <ul class="list-group">
-                            @foreach (var scope in Model.IdentityScopes)
+                            @foreach(ScopeViewModel scope in Model.IdentityScopes)
                             {
-                                <partial name="_ScopeListItem" model="@scope" />
+                                <partial name="_ScopeListItem" model="@scope"/>
                             }
                         </ul>
                     </div>
                 }
 
-                @if (Model.ResourceScopes.Any())
+                @if(Model.ResourceScopes.Any())
                 {
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -74,19 +76,19 @@
                             Application Access
                         </div>
                         <ul class="list-group">
-                            @foreach (var scope in Model.ResourceScopes)
+                            @foreach(ScopeViewModel scope in Model.ResourceScopes)
                             {
-                                <partial name="_ScopeListItem" model="scope" />
+                                <partial name="_ScopeListItem" model="scope"/>
                             }
                         </ul>
                     </div>
                 }
 
-                @if (Model.AllowRememberConsent)
+                @if(Model.AllowRememberConsent)
                 {
                     <div class="consent-remember">
                         <label>
-                            <input class="consent-scopecheck" asp-for="RememberConsent" />
+                            <input class="consent-scopecheck" asp-for="RememberConsent"/>
                             <strong>Remember My Decision</strong>
                         </label>
                     </div>
@@ -95,7 +97,7 @@
                 <div class="consent-buttons">
                     <button name="button" value="yes" class="btn btn-primary" autofocus>Yes, Allow</button>
                     <button name="button" value="no" class="btn">No, Do Not Allow</button>
-                    @if (Model.ClientUrl != null)
+                    @if(Model.ClientUrl != null)
                     {
                         <a class="pull-right btn btn-default" target="_blank" href="@Model.ClientUrl">
                             <span class="glyphicon glyphicon-info-sign"></span>
