--- a/IdentityServer/Views/Shared/_ScopeListItem.cshtml
+++ b/IdentityServer/Views/Shared/_ScopeListItem.cshtml
@@ -1,18 +1,18 @@
 ﻿<!--
- Digital Excellence Copyright (C) 2020 Brend Smits
+Digital Excellence Copyright (C) 2020 Brend Smits
  
- This program is free software: you can redistribute it and/or modify 
- it under the terms of the GNU Lesser General Public License as published 
- by the Free Software Foundation version 3 of the License.
+This program is free software: you can redistribute it and/or modify 
+it under the terms of the GNU Lesser General Public License as published 
+by the Free Software Foundation version 3 of the License.
  
- This program is distributed in the hope that it will be useful, 
- but WITHOUT ANY WARRANTY; without even the implied warranty 
- of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
- See the GNU Lesser General Public License for more details.
+This program is distributed in the hope that it will be useful, 
+but WITHOUT ANY WARRANTY; without even the implied warranty 
+of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
+See the GNU Lesser General Public License for more details.
  
- You can find a copy of the GNU Lesser General Public License 
- along with this program, in the LICENSE.md file in the root project directory.
- If not, see https://www.gnu.org/licenses/lgpl-3.0.txt
+You can find a copy of the GNU Lesser General Public License 
+along with this program, in the LICENSE.md file in the root project directory.
+If not, see https://www.gnu.org/licenses/lgpl-3.0.txt
 -->
 @model ScopeViewModel
 
@@ -24,24 +24,26 @@
                id="scopes_@Model.Name"
                value="@Model.Name"
                checked="@Model.Checked"
-               disabled="@Model.Required" />
-        @if (Model.Required)
+               disabled="@Model.Required"/>
+        @if(Model.Required)
         {
             <input type="hidden"
                    name="ScopesConsented"
-                   value="@Model.Name" />
+                   value="@Model.Name"/>
         }
         <strong>@Model.DisplayName</strong>
-        @if (Model.Emphasize)
+        @if(Model.Emphasize)
         {
             <span class="glyphicon glyphicon-exclamation-sign"></span>
         }
     </label>
-    @if (Model.Required)
+    @if(Model.Required)
     {
-        <span><em>(required)</em></span>
+        <span>
+            <em>(required)</em>
+        </span>
     }
-    @if (Model.Description != null)
+    @if(Model.Description != null)
     {
         <div class="consent-description">
             <label for="scopes_@Model.Name">@Model.Description</label>
